# EfficientSAM3-Benchmark

./: .gitignore  README.md  environment-ros-jazzy.yml  pyproject.toml  requirements-thor.txt  requirements.txt
configs/: pace.yaml  thor.yaml
docs/: benchmark_dataset_protocol.md  current_benchmark_results.md  pipeline_bottleneck_profiling.md  rtx5090_offline_benchmark.md  saco_stream_benchmark.md  status_plan.md  thor_offline_benchmark.md  thor_ros_camera_benchmark.md  thor_saco_stream_benchmark.md  thor_setup.md  thor_setup_zh_tw.md
sam_backend/: __init__.py  backends.py  benchmark.py  coco_all_summary.py  coco_manifest.py  coco_suite.py  env_probe.py  instinctsam.py  overlay.py  pipeline_bottleneck_profile.py  profile_coco.py  profile_image.py  profile_multi_prompt_image.py  profile_saco_stream.py  profile_sav_frames.py  profile_sav_video.py  profile_video.py  profile_yolo_coco.py  profile_yoloe_edgetam.py  profiling.py  saco_manifest.py  saco_model_summary.py  saco_stream_suite.py  sav_manifest.py  sav_review.py  sav_text_prompts.py  sav_video_report.py  streaming.py  summarize_results.py  thor_offline_report.py  thor_pipeline_smoke.py  variant_runner.py  yolo_coco_suite.py  yolo_streaming.py
scripts/: check_pace_qos.sh  check_storage_budget.sh  download_coco_val2017.sh  download_efficientsam3_checkpoints.sh  download_hf_checkpoints_via_git.sh  download_instinctsam_vitb_checkpoint.sh  download_saco_sav_media.sh  download_saco_stream_assets.sh  download_sam2_family_checkpoints.sh  download_sam3_checkpoint.sh  download_sav_valtest_subset.sh  download_yoloe_edgetam_mobilesam_assets.sh  pace_l40s_benchmark.sbatch  pace_l40s_coco_suite.sbatch  pace_l40s_mobilesam_coco.sbatch  pace_l40s_profile_efficientsam3.sbatch  pace_l40s_profile_sam3.sbatch  pace_l40s_sampled_camera_frame_smoke.sbatch  pace_l40s_sav_video_sam2_family.sbatch  pace_l40s_yoloe_edgetam_poc.sbatch  pace_l40s_yoloe_edgetam_sav_text.sbatch  pace_prepare_sav_salient_subset.sbatch  prepare_benchmark_datasets.sh  prepare_coco_fixed_subset.sh  prepare_sav_fixed10_subset.sh  prepare_sav_salient_subset.sh  run_pace_thor_pipeline_smoke.sh  run_pipeline_bottleneck_matrix.sh  run_sampled_camera_frame_smoke.sh  run_thor_coco_all_benchmarks.sh  run_thor_multi_prompt_image_benchmark.sh  run_thor_ros_saco_stream_suite.sh  run_thor_saco_video_and_image_per_frame.sh  run_thor_yolo_coco_suite.sh  setup_5090_offline_benchmark.sh  setup_model_repos.sh  setup_pace_ros_conda.sh  setup_pace_venv.sh  setup_thor_saco_stream_benchmark.sh  source_thor_ros_env.sh  (+2 more)
tests/: test_backend_config.py  test_benchmark_null.py  test_coco_all_summary.py  test_coco_profile_null.py  test_coco_suite.py  test_multi_prompt_image.py  test_pipeline_bottleneck_profile.py  test_profile_image_null.py  test_profile_sav_video.py  test_profiling.py  test_saco_model_summary.py  test_saco_stream.py  test_sam3_backend.py  test_sav_frame_profile.py  test_sav_manifest.py  test_sav_text_prompts.py  test_sav_video_overlay.py  (+8 more)
(+24 files in other folders)
