[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efficientsam3-benchmark"
version = "0.1.0"
description = "Portable SAM3/EfficientSAM3 backend benchmark scaffold for PACE and Jetson Thor."
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=1.26,<2",
  "opencv-python-headless>=4.9",
  "pillow>=10",
  "pyyaml>=6",
  "huggingface_hub",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sam-benchmark = "sam_backend.benchmark:main"
sam-env-probe = "sam_backend.env_probe:main"
sam-profile-image = "sam_backend.profile_image:main"
sam-profile-video = "sam_backend.profile_video:main"
sam-run-efficientsam3-variants = "sam_backend.variant_runner:main"
sam-summarize-results = "sam_backend.summarize_results:main"
sam-thor-pipeline-smoke = "sam_backend.thor_pipeline_smoke:main"

[tool.setuptools.packages.find]
include = ["sam_backend*"]
