[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efficientsam3-benchmark"
version = "0.1.0"
description = "Portable SAM3/EfficientSAM3 backend benchmark scaffold for PACE and Jetson Thor."
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=1.26,<2",
  "opencv-python-headless>=4.9",
  "pillow>=10",
  "pyyaml>=6",
  "huggingface_hub",
  "pycocotools>=2.0",
  "setuptools>=68,<81",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sam-benchmark = "sam_backend.benchmark:main"
sam-env-probe = "sam_backend.env_probe:main"
sam-profile-image = "sam_backend.profile_image:main"
sam-profile-video = "sam_backend.profile_video:main"
sam-profile-pipeline-bottleneck = "sam_backend.pipeline_bottleneck_profile:main"
sam-make-coco-manifest = "sam_backend.coco_manifest:main"
sam-make-sav-manifest = "sam_backend.sav_manifest:main"
sam-review-sav-manifest = "sam_backend.sav_review:main"
sam-sav-text-prompts = "sam_backend.sav_text_prompts:main"
sam-profile-coco = "sam_backend.profile_coco:main"
sam-profile-sav-frames = "sam_backend.profile_sav_frames:main"
sam-profile-sav-video = "sam_backend.profile_sav_video:main"
sam-profile-yoloe-edgetam = "sam_backend.profile_yoloe_edgetam:main"
sam-prepare-saco-veval-sav-subset = "sam_backend.saco_manifest:main"
sam-profile-saco-stream = "sam_backend.profile_saco_stream:main"
sam-profile-multi-prompt-image = "sam_backend.profile_multi_prompt_image:main"
sam-run-saco-stream-suite = "sam_backend.saco_stream_suite:main"
sam-summarize-sav-video-suite = "sam_backend.sav_video_report:main"
sam-run-coco-suite = "sam_backend.coco_suite:main"
sam-run-efficientsam3-variants = "sam_backend.variant_runner:main"
sam-summarize-results = "sam_backend.summarize_results:main"
sam-thor-pipeline-smoke = "sam_backend.thor_pipeline_smoke:main"

[tool.setuptools.packages.find]
include = ["sam_backend*"]
